--- a/app/components/startups/startup.list.html
+++ b/app/components/startups/startup.list.html
@@ -1,6 +1,6 @@
 <div>
     <div class="row">
-        <div ng-if="!$state.includes('search.*')" class="col-lg-2 col-md-3 col-sm-4">
+        <div ng-if="!$state.includes('search.*') && !nav.embedded" class="col-lg-2 col-md-3 col-sm-4">
             <!-- Navigation Block -->
             <div class="hpanel hgreen">
                 <div class="panel-footer top" style="font-size: 17px;">
@@ -86,7 +86,7 @@
 
 
 
-        <div ng-class="{'col-lg-10 col-md-9 col-sm-8' : !$state.includes('search.*')}" style="padding-left: 15px; padding-right: 15px;">
+        <div ng-class="{'col-lg-10 col-md-9 col-sm-8' : !$state.includes('search.*') && !nav.embedded}" style="padding-left: 15px; padding-right: 15px;">
 
             <div class="hpanel">
                 <div class="panel-footer top">
