--- a/app/components/common/nav/nav.community_settings.html
+++ b/app/components/common/nav/nav.community_settings.html
@@ -68,7 +68,7 @@
 
                 <div class="form-group" style="margin-top: 25px;">
                     <label>Use this code to embed this community:</label>
-                    <pre>[iframe src="https://startupcommunity.org/{{ settings.location_key + '/'}}{{ settings.community.key }}" width="100%" height="1250"]</pre>
+                    <pre>[iframe src="https://startupcommunity.org/{{ settings.community.key == settings.location_key ? settings.community.key : settings.location_key + '/' + settings.community.key }}" width="100%" height="1250"]</pre>
                     <em>This code is an example using the <a target="_blank" href="https://wordpress.org/plugins/iframe/">Wordpress Iframe plugin</a>. We recommend a minimum width of around 650px and minimum height of 1250px for the iframe.</em>
                 </div>
             </div>
