--- a/app/components/startups/startup.list.item.html
+++ b/app/components/startups/startup.list.item.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 dash-table">
     <div>
         <a ui-sref="startup.dashboard({profile: item.value, community_path: item.value.key, community: {}})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
-                ng-src="{{item.value.profile.avatar || 'images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.style.display='none'"/></a>
+                ng-src="{{item.value.profile.avatar || 'images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/blank_startup.png'"/></a>
     </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
         <a ui-sref="startup.dashboard({profile: item.value, community_path: item.value.key, community: {}})" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
