404 loads proper, need to fix page

--- a/app/components/startups/startup.dashboard.html
+++ b/app/components/startups/startup.dashboard.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-sm-9">
                         <div class="col-sm-2 col-lg-1">
-                            <img style="height:75px;" ng-src="{{profile.startup.profile.avatar || profile.startup.profile.angellist.thumb_url || 'images/blank_startup.jpg'}}" alt="{{::profile.startup.profile.name}}">
+                            <img style="height:75px;" ng-src="{{profile.startup.logo || profile.startup.profile.avatar || profile.startup.profile.angellist.thumb_url || 'images/blank_startup.jpg'}}" alt="{{::profile.startup.profile.name}}">
                         </div>
                         <div class="col-sm-10 col-lg-11" style="padding-bottom: 15px;">
                             <div class="project-action" style="margin-right: -15px;">
