--- a/app/components/startups/startup.list.item.html
+++ b/app/components/startups/startup.list.item.html
@@ -1,10 +1,10 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="startup.dashboard({profile: item.value, community_path: item.value.key, community: {}})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
+        <a ui-sref="startup.dashboard({profile: item.value, location_path: item.value.key, location: item.value, community: users.community })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
                 ng-src="{{item.value.profile.avatar || 'images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/blank_startup.png'"/></a>
     </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
-        <a ui-sref="startup.dashboard({profile: item.value, community_path: item.value.key, community: {}})" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
+        <a ui-sref="startup.dashboard({profile: item.value, location_path: item.value.key, location: item.value, community: users.community })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-show="{{(item.value.profile.angellist.product_desc).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
         <li ng-repeat="val in item.value.communities" class="role-right">
