--- a/app/components/common/errors/500.html
+++ b/app/components/common/errors/500.html
@@ -4,7 +4,7 @@
             <p style="font-size: 1.5em;"><i class="fa fa-chevron-circle-left text-muted"></i> <a ng-click="goBack()">Go back</a></p>
         </div>
         <div class="error-options" style="margin-right: 30px; margin-top: 20px; float: right;">
-            <p style="font-size: 1.5em;"><a href="/">Login</a> <i style="font-size: .9em;" class="fa fa-chevron-circle-right text-muted"></i></p>
+            <p style="font-size: 1.5em;"><a ui-sref="login">Login</a> <i style="font-size: .9em;" class="fa fa-chevron-circle-right text-muted"></i></p>
         </div>
     </div>
     <div class="row">
