fixed logo issue

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div ng-if="nav.location.profile.logo" style="margin-left: -21px;"><img style="width:182px; border: 1px solid #ddd;" ng-src="{{nav.location.profile.logo}}"/></div>
+            <div ng-if="nav.community.profile.sc_logo" style="margin-left: -21px;"><img style="width:182px; border: 1px solid #ddd;" ng-src="{{nav.community.profile.sc_logo}}"/></div>
         </div>
 
         <ul side-navigation class="nav" id="side-menu" style="border-top: 1px solid #eee;">
