icon change on startup page

--- a/app/components/startups/startup.add.html
+++ b/app/components/startups/startup.add.html
@@ -3,7 +3,7 @@
         <div class="panel-body">
             <h2 class="font-light m-b-xs">
                 <span>{{ $state.params.pageTitle }}</span>
-                <i class="pull-right" ng-class="{'fa fa-circle-o-notch fa-spin' : add.working, 'pe-7s-id' : !add.working}" style="font-size: 50px;"></i>
+                <i class="pull-right" ng-class="{'fa fa-circle-o-notch fa-spin' : add.working, 'fa-rocket' : !add.working}" style="font-size: 50px;"></i>
             </h2>
             <small>{{ $state.params.pageDescription }}</small>
         </div>
