--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -24,7 +24,7 @@
                                 <i class="fa fa-flag text-danger"></i> Leaders
                             </a>
                         </li>
-                        <li ng-class="{'active':users.selectedRole.indexOf('advisor') >= 0}" ng-click="users.filterRole('advisor')">
+                        <li ng-class="{'active':users.selectedRole.indexOf('mentor') >= 0}" ng-click="users.filterRole('mentor')">
                             <a>
                                 <i class="fa fa-graduation-cap text-info"></i> Advisors
                             </a>
