--- a/app/components/networks/network.dashboard.html
+++ b/app/components/networks/network.dashboard.html
@@ -326,7 +326,7 @@
                 <div class="panel-body" style="height: 83px;">
                     <div class="row">
                         <div class="col-md-7 forum-heading">
-                            <span class="label label-primary pull-left">Advisor Group</span>
+                            <span class="label label-primary pull-left">Mentor Group</span>
                             <a ui-sref="#"><h4> Stable of Experts</h4></a>
                             <div class="desc" style="margin-bottom:5px;">Economic Development for Central Oregon (EDCO) list of qualfied startup advisors.</div>
                         </div>
