--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -26,7 +26,7 @@
                         </li>
                         <li ng-class="{'active':users.selectedRole.indexOf('mentor') >= 0}" ng-click="users.filterRole('mentor')">
                             <a>
-                                <i class="fa fa-graduation-cap text-info"></i> Advisors
+                                <i class="fa fa-graduation-cap text-info"></i> Mentors
                             </a>
                         </li>
                         <li ng-class="{'active':users.selectedRole.indexOf('investor') >= 0}" ng-click="users.filterRole('investor')">
