--- a/app/components/networks/network.dashboard.html
+++ b/app/components/networks/network.dashboard.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="col-md-6" style="padding-top: 10px;">
                             <div class="stats-title pull-left">
-                                <h6>Advisors</h6>
+                                <h6>Mentors</h6>
                             </div>
                             <div class="stats-icon pull-right">
                                 <i class="fa fa-graduation-cap text-info" style="opacity: .5;"></i>
@@ -328,11 +328,11 @@
                         <div class="col-md-7 forum-heading">
                             <span class="label label-primary pull-left">Mentor Group</span>
                             <a ui-sref="#"><h4> Stable of Experts</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Economic Development for Central Oregon (EDCO) list of qualfied startup advisors.</div>
+                            <div class="desc" style="margin-bottom:5px;">Economic Development for Central Oregon (EDCO) list of qualfied startup mentors.</div>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">134</span>
-                            <small>Advisors</small>
+                            <small>Mentors</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">22</span>
@@ -358,7 +358,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">18</span>
-                            <small>Advisors</small>
+                            <small>Mentors</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">12</span>
@@ -384,7 +384,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">10</span>
-                            <small>Advisors</small>
+                            <small>Mentors</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">2</span>
