--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -4,10 +4,10 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-9">
-                        <div class="col-xs-2 col-lg-1">
-                            <img class="img-circle m-b" style="height:75px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}">
-                        </div>
-                        <div class="col-xs-10 col-lg-11" style="padding-bottom: 15px;">
+                        <div style="padding-bottom: 20px;">
+                            <div style="float: left; padding-right:20px;">
+                                <img class="img-circle m-b" style="height:75px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}">
+                            </div>
                             <div style="margin-right: -15px;">
                                 <div class="btn-group pull-right">
                                     <a ng-click="profile.contact(profile.user)" title="Contact {{item.value.profile.name}}" class="pull-left" style="padding-right: 8px;">
@@ -16,7 +16,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <h3>{{::profile.user.profile.name | words:0}} {{::profile.user.profile.name |
+                            <h3 style="padding-top: 5px;">{{::profile.user.profile.name | words:0}} {{::profile.user.profile.name |
                                 words:1}} {{::profile.user.profile.name | words:2}}
                             </h3>
                             <h4>
