working invite page

--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="panel-body filternav">
 
-                    <ul class="panel-list">
+                    <ul class="panel-list" style="white-space: nowrap; overflow: hidden;">
                         <li ng-class="{'active':users.selectedRole.indexOf('*') >= 0}" ng-click="users.filterRole('*')">
                             <a><i class="fa fa-fw fa-globe themed-color-dark"></i> All</a>
                         </li>
